# edgeai-gst-plugins

./: .gitignore  LICENSE  README.md  aarch64-none-linux-gnu.ini  crosscompile.txt  gst_log.txt  meson.build  meson_options.txt  tags
crossbuild/: aarch64.ini  crosscompile.txt  environment
crossbuild/DEBIAN/: control
docs/: elements.md  meson.build  sitemap.txt
ext/: meson.build
ext/ti/: gstti.c  gstticolorconvert.c  gstticolorconvert.h  gsttidlinferer.cpp  gsttidlpostproc.cpp  gsttidlpreproc.cpp  gsttidlpreproc.h  gsttiisppreproc.c  gsttiisppreproc.h  gsttimosaic.c  gsttimosaic.h  gsttiperfoverlay.cpp  gsttipreproc.cpp  gsttiscaler.c  meson.build
ext/tiovx/: dummy.cpp  dummy.h  gstiovx.c  gstticolorconvert.c  gsttidlinferer.cpp  gsttidlinferer.h  gsttidlpostproc.cpp  gsttidlpostproc.h  gsttidrop.c  gsttidrop.h  gsttilog.c  gsttilog.h  gsttiovx.c  gsttiovxcolorconvert.c  gsttiovxcolorconvert.h  gsttiovxdelay.c  gsttiovxdelay.h  gsttiovxdemux.c  gsttiovxdemux.h  gsttiovxdlcolorblend.c  gsttiovxdlcolorblend.h  gsttiovxdlcolorconvert.c  gsttiovxdlcolorconvert.h  gsttiovxdlpreproc.c  gsttiovxdlpreproc.cpp  gsttiovxdlpreproc.h  gsttiovxdof.c  gsttiovxdof.h  gsttiovxdofviz.c  gsttiovxdofviz.h  gsttiovxfc.c  gsttiovxfc.h  gsttiovxisp.c  gsttiovxisp.h  gsttiovxldc.c  gsttiovxldc.h  gsttiovxmemalloc.c  gsttiovxmemalloc.h  gsttiovxmosaic.c  gsttiovxmosaic.h  (+31 more)
gst-docs/: index.md  meson.build
gst-libs/gst/: meson.build
gst-libs/gst/TODO/: gstTODO.c  gstTODO.h  meson.build
gst-libs/gst/ti/: gsttidloutmeta.c  gsttidloutmeta.h  meson.build
gst-libs/gst/tiovx/: gsttidloutmeta.c  gsttidloutmeta.h  gsttiovx.c  gsttiovx.h  gsttiovxallocator.c  gsttiovxallocator.h  gsttiovxbufferpool.c  gsttiovxbufferpool.h  gsttiovxbufferpoolutils.c  gsttiovxbufferpoolutils.h  gsttiovxbufferutils.c  gsttiovxbufferutils.h  gsttiovxcontext.c  gsttiovxcontext.h  gsttiovximagebufferpool.c  gsttiovximagebufferpool.h  gsttiovximagemeta.c  gsttiovximagemeta.h  gsttiovxmeta.c  gsttiovxmeta.h  gsttiovxmiso.c  gsttiovxmiso.h  gsttiovxmuxmeta.c  gsttiovxmuxmeta.h  gsttiovxpad.c  gsttiovxpad.h  gsttiovxpyramidbufferpool.c  gsttiovxpyramidbufferpool.h  gsttiovxpyramidmeta.c  gsttiovxpyramidmeta.h  gsttiovxqueueableobject.c  gsttiovxqueueableobject.h  gsttiovxrawimagebufferpool.c  gsttiovxrawimagebufferpool.h  gsttiovxrawimagemeta.c  gsttiovxrawimagemeta.h  gsttiovxsensormeta.c  gsttiovxsensormeta.h  gsttiovxsimo.c  gsttiovxsimo.h  (+9 more)
hooks/: pre-commit.hook
pkgconfig/: edgeai_apps_utils.pc  edgeai_dl_inferer.pc  edgeai_tiovx_kernels.pc  edgeai_tiovx_modules.pc  imaging.pc  ti_stereo_perception.pc  ti_vision_apps.pc  tiovx.pc  vision_apps_modules.pc
tests/: meson.build
tests/check/: gstTODO_multiple_transitions.c  gsttiovx_multiple_transitions.c  gsttiovxcolorconvert.c  gsttiovxdemux.c  gsttiovxdlcolorblend.c  gsttiovxdlcolorconvert.c  gsttiovxdlpreproc.c  gsttiovxisp.c  gsttiovxldc.c  gsttiovxmock.c  gsttiovxmosaic.c  gsttiovxmultiscaler.c  gsttiovxmux.c  gsttiovxpyramid.c  gsttiovxsiso.c  gsttiovxsisomock.c  gsttiovxsisomock.h  gsttiovxvideoconvert.c  gstvideoconvert.c  meson.build  test_utils.c  test_utils.h
tests/check/libs/: gsttiovxallocator.c  gsttiovxbufferpool.c  gsttiovximagebufferpool.c  gsttiovxmiso.c  gsttiovxpad.c  gsttiovxpyramidbufferpool.c  gsttiovxrawimagebufferpool.c  gsttiovxsimo.c  gsttiovxsiso.c  gsttiovxtensorbufferpool.c
tests/examples/: .pre-commit-config.yaml  checksum_validation.py  checksums.yaml  gstTODO_example.c  gsttiovx_example.c  meson.build  setup.py  test_mux_app.py
